--- a/src/com/sanms/siso/eft/view/PosSimulator.form
+++ b/src/com/sanms/siso/eft/view/PosSimulator.form
@@ -43,7 +43,7 @@
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
               </AuxValues>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+            <MenuItem class="javax.swing.JMenuItem" name="jm_sendMessage">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Send Message"/>
               </Properties>
