--- a/src/com/sanms/siso/eft/view/PosSimulator.form
+++ b/src/com/sanms/siso/eft/view/PosSimulator.form
@@ -47,6 +47,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Send Message"/>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -165,8 +168,8 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="TRAMA ISO">
-                <Property name="tabTitle" type="java.lang.String" value="TRAMA ISO"/>
+              <JTabbedPaneConstraints tabName="ISO Message">
+                <Property name="tabTitle" type="java.lang.String" value="ISO Message"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -250,12 +253,12 @@
             </Container>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Requerimiento"/>
+                <Property name="text" type="java.lang.String" value="Request"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Respuesta"/>
+                <Property name="text" type="java.lang.String" value="Response"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -266,8 +269,8 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="REQUERIMIENTO">
-                <Property name="tabTitle" type="java.lang.String" value="REQUERIMIENTO"/>
+              <JTabbedPaneConstraints tabName="Request">
+                <Property name="tabTitle" type="java.lang.String" value="Request"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -295,8 +298,8 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="RESPUESTA">
-                <Property name="tabTitle" type="java.lang.String" value="RESPUESTA"/>
+              <JTabbedPaneConstraints tabName="Response">
+                <Property name="tabTitle" type="java.lang.String" value="Response"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -324,8 +327,8 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="ESTADO">
-                <Property name="tabTitle" type="java.lang.String" value="ESTADO"/>
+              <JTabbedPaneConstraints tabName="Status">
+                <Property name="tabTitle" type="java.lang.String" value="Status"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -338,11 +341,11 @@
                   <Table columnCount="9" rowCount="0">
                     <Column editable="true" title="N&#xb0;" type="java.lang.Object"/>
                     <Column editable="true" title="Thread" type="java.lang.Object"/>
-                    <Column editable="true" title="socket" type="java.lang.Object"/>
-                    <Column editable="true" title="estado" type="java.lang.Object"/>
-                    <Column editable="true" title="Hora Req" type="java.lang.Object"/>
+                    <Column editable="true" title="Socket" type="java.lang.Object"/>
+                    <Column editable="true" title="Status" type="java.lang.Object"/>
+                    <Column editable="true" title="Request time" type="java.lang.Object"/>
                     <Column editable="true" title="Req" type="java.lang.Object"/>
-                    <Column editable="true" title="Hora Resp" type="java.lang.Object"/>
+                    <Column editable="true" title="Response time" type="java.lang.Object"/>
                     <Column editable="true" title="Res" type="java.lang.Object"/>
                     <Column editable="true" title="Total(ms) " type="java.lang.Object"/>
                   </Table>
@@ -422,14 +425,14 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Nro Instancias: "/>
+            <Property name="text" type="java.lang.String" value="Num Instances"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="num_instances">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Nro de Envios:"/>
+            <Property name="text" type="java.lang.String" value="Num shipments"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="num_send_per_instance">
@@ -526,12 +529,12 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
-            <Property name="text" type="java.lang.String" value="SERVER IP :"/>
+            <Property name="text" type="java.lang.String" value="IP Server :"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
-            <Property name="text" type="java.lang.String" value="PUERTO :"/>
+            <Property name="text" type="java.lang.String" value="Port Server :"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="ip_adress">
@@ -568,6 +571,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSendMessageActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
